--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/node": "^20.2.1",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "git-commit-msg-linter": "^5.0.4",
+    "@types/jest": "^24.0.25",
+    "@types/node": "^13.1.6",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "git-commit-msg-linter": "^2.3.11",
     "husky": "^4.0.6",
-    "jest": "^29.5.0",
-    "lint-staged": "^13.2.2",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "jest": "^24.9.0",
+    "lint-staged": "^9.5.0",
+    "ts-jest": "^24.3.0",
+    "typescript": "^3.7.4"
   }
 }
